# delta-neutral

./: Cargo.toml  README.md  dockerfile  package-lock.json  package.json  svelte.config.js
src/: app.d.ts  app.html
src/lib/: DatedFutureRow.svelte  PerpRow.svelte  SettingsModal.svelte  TradesTable.svelte
src/lib/stores/: settings.ts
src/lib/ts/: binance_futures.ts  bybit_futures.ts  ftx_futures.ts
src/routes/: index.svelte
src/routes/exchanges/: market_bundle.json.ts
src/routes/ftx/: futures.json.ts  spotMarkets.json.ts
