[package]
name = "delta-neutral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
ftx = "0.5.0"
binance = "0.18.4"
rust-bybit = "0.1.0-alpha.0"
serde = "1.0.137"
warp = "0.3.2"
actix = "0.13.0"